add branch to .github

--- a/.github/workflows/devcontaienr-ci.yml
+++ b/.github/workflows/devcontaienr-ci.yml
@@ -2,12 +2,12 @@ name: Check Dev Container
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ 'main', 'improved-api']
     paths:
       - ".devcontainer/**"
       - ".github/workflows/devcontainer-ci.yaml"
   pull_request:
-    branches: [ "main" ]
+    branches: [ 'main', 'improved-api' ]
     paths:
       - ".devcontainer/**"
       - ".github/workflows/devcontainer-ci.yaml"
