--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -2,14 +2,14 @@ name: Run Python linter and formatter
 
 on:
   push:
-    branches: [ main ]
+    branches: [ 'main', 'improved-api']
     paths-ignore:
       - '**.md'
       - 'lab/**'
       - 'assets/**'
 
   pull_request:
-    branches: [ main ]
+    branches: [ 'main', 'improved-api' ]
     paths-ignore:
       - '**.md'
       - 'lab/**'
