--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -28,10 +28,7 @@ jobs:
           run: |
             python -m pip install --upgrade pip
             pip install -r requirements-dev.txt
-        - name: Lint with ruff
+        - name: Check linting with ruff
           run: |
             ruff check .
             ruff format .
-        - name: Format with black
-          run: |
-            black .
