--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,13 @@
 line-length = 120
 select = ["E", "F", "I", "UP"]
 ignore = ["D203"]
+extend-exclude = ["src/flaskapp/migrations/"]
 
 [tool.ruff.isort]
-known-first-party = ["src"]
+known-first-party = ["flaskapp"]
+
+[tool.pytest.ini_options]
+addopts = "-ra -vv"
+
+[tool.coverage.report]
+show_missing = true
