--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,21 @@
 [tool.ruff]
 line-length = 120
-select = ["E", "F", "I", "UP"]
-ignore = ["D203"]
+lint.select = ["E", "F", "I", "UP"]
+target-version = "py312"
 extend-exclude = ["src/flaskapp/migrations/"]
+src = ["src"]
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 known-first-party = ["flaskapp"]
 
+[tool.black] 
+line-length = 120 
+target-version = ["py312"]
+extend-exclude = "src/flaskapp/migrations/"
+
 [tool.pytest.ini_options]
-addopts = "-ra -vv"
+addopts = "-ra --cov"
+pythonpath = ["src"]
 
 [tool.coverage.report]
 show_missing = true
