--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,8 +3,13 @@
 # Testing Tools
 pytest
 ephemeral-port-reserve
+pytest-playwright
 coverage
 pytest-cov
+axe-playwright-python
+
+pre-commit
+pip-tools
 
 # Linters
 ruff
