--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ extend-exclude = "src/flaskapp/migrations/"
 
 [tool.pytest.ini_options]
 addopts = "-ra --cov"
+testpaths = ["tests"] 
 pythonpath = ["src"]
 
 [tool.coverage.report]
