--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -2,12 +2,12 @@ name: Run Python linter and formatter
 
 on:
   push:
-    branches: [ 'main', 'improved-api']
+    branches: [ 'main' ]
     paths:
       - '**.py'
 
   pull_request:
-    branches: [ 'main', 'improved-api' ]
+    branches: [ 'main' ]
     paths:
       - '**.py'
 
